--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ html {
 @media (min-width: 768px){
   html {
     box-sizing: border-box;
-    font-size: 16px;
   }
 }
 *, *:before, *:after {
@@ -46,6 +45,12 @@ body {
   position: relative;
   max-width: 1400px;
   margin: 0 auto;
+}
+blockquote {
+  font-style: italic;
+  border-left: 2px solid #C60000;
+  margin-left: 0;
+  padding: .5rem 1rem;
 }
 .np {
 	padding: 0;
@@ -143,7 +148,10 @@ header {
   box-shadow: -4px -4px 20px 0px rgba(101, 101, 101, 0.1);
 }
 
-
+.logo {
+  display: block;
+  margin-bottom: 2rem;
+}
 .contact-us {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -194,16 +202,16 @@ main *{
 }
 @media (min-width: 768px){
   main {
-    float:right;
-    width: 85%;
-    position: absolute;
-    right: 0;
-    top: 40%;
+
   }
 }
 @media (min-width: 1200px){
   main {
     width: 75%;
+    float:right;
+    position: absolute;
+    right: 0;
+    top: 40%;
   }
 }
 @media (min-width: 1400px){
